syntax = "proto3";

package io.mystore.stock.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping/entity/ship_order_item_entity.proto";

option java_outer_classname = "OrderSkuItemToStockSkuItemService";

service OrderSkuItemToStockSkuItem {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc OnStockSkuItemRequired(shipping.entity.SkuItemRequired) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order_item"
    };
  }

  rpc OnStockSkuItemReleased(shipping.entity.SkuItemReleasedFromOrder) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order_item"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "ship_order_item"
    };
  }
}
